--- a/phaedrus/phaedrus1.html
+++ b/phaedrus/phaedrus1.html
@@ -70,7 +70,7 @@ class="line">“Qui<label for="7" class="margin-toggle sidenote-number"></label>
 class="sidenote">quomodo</span> possum, quaeso, facere quod quereris,
 lupe?<br></span> <span class="line">A te decurrit ad meos
 haustus<label for="8" class="margin-toggle sidenote-number"></label><input type="checkbox" id="8" class="margin-toggle"/><span
-class="sidenote">ad potÃºs meos</span> liquor”.<br></span> <span
+class="sidenote">ad potús meos</span> liquor”.<br></span> <span
 class="line">Repulsus ille veritatis viribus,<br></span> <span
 class="line">“Ante hos sex menses male,” ait, “dixisti mihi.”<br></span>
 <span class="line">Respondit agnus, “Equidem natus non eram.”<br></span>
@@ -156,7 +156,7 @@ sustinete, maius ne veniat, malum.”<br></span></p>
 <section>
 <h2 id="iii.-graculus-superbus-et-pavo">III. Graculus Superbus et
 Pavo</h2>
-<p><span class="line">Ne gloriari
+<p><span class="line"><span class="newthought">Ne gloriari</span>
 libeat<label for="30" class="margin-toggle sidenote-number"></label><input type="checkbox" id="30" class="margin-toggle"/><span
 class="sidenote">placeat</span> alienis bonis,<br></span> <span
 class="line">suoque potius
@@ -184,28 +184,44 @@ class="sidenote">interponit</span> se pavonum formoso gregi.<br></span>
 <span class="line">Illi impudenti pinnas eripiunt avi,<br></span> <span
 class="line">fugantque
 rostris<label for="38" class="margin-toggle sidenote-number"></label><input type="checkbox" id="38" class="margin-toggle"/><span
-class="sidenote">ad fugam rostris suis graculum
-compellunt</span>.<br></span><span class="line">Male mulcatus
-graculus<br></span> <span class="line">redire maerens coepit ad proprium
-genus,<br></span> <span class="line">a quo repulsus tristem sustinuit
-notam.<br></span> <span class="line">Tum quidam ex illis quos prius
-despexerat<br></span> <span class="line">‘Contentus nostris si fuisses
-sedibus<br></span> <span class="line">et quod Natura dederat voluisses
-pati,<br></span> <span class="line">nec illam expertus esses
-contumeliam<br></span> <span class="line">nec hanc repulsam tua sentiret
-calamitas.’<br></span></p>
+class="sidenote">ad fugam rostris suis graculum coniciunt</span>. Male
+mulcatus<label for="39" class="margin-toggle sidenote-number"></label><input type="checkbox" id="39" class="margin-toggle"/><span
+class="sidenote">valde laceratus</span> graculus<br></span> <span
+class="line">redire
+maerens<label for="40" class="margin-toggle sidenote-number"></label><input type="checkbox" id="40" class="margin-toggle"/><span
+class="sidenote">tristis</span> coepit ad proprium genus,<br></span>
+<span class="line">a quo repulsus tristem sustinuit
+notam<label for="41" class="margin-toggle sidenote-number"></label><input type="checkbox" id="41" class="margin-toggle"/><span
+class="sidenote">triste insignitus est</span>.<br></span> <span
+class="line">Tum quidam ex illis quos prius
+despexerat<label for="42" class="margin-toggle sidenote-number"></label><input type="checkbox" id="42" class="margin-toggle"/><span
+class="sidenote">contempserat</span><br></span> <span
+class="line">‘Contentus nostris si fuisses
+sedibus<label for="43" class="margin-toggle sidenote-number"></label><input type="checkbox" id="43" class="margin-toggle"/><span
+class="sidenote">si contentus nostris sedibus fuisses</span><br></span>
+<span class="line">et quod Natura dederat voluisses pati,<br></span>
+<span class="line">nec illam expertus esses
+contumeliam<label for="44" class="margin-toggle sidenote-number"></label><input type="checkbox" id="44" class="margin-toggle"/><span
+class="sidenote">nec illam contumeliam sentiret</span><br></span> <span
+class="line">nec hanc repulsam tua sentiret calamitas.’<br></span></p>
+<p><span class="line"><br><br></span></p>
 </section>
 <section>
 <h2 id="iv.-canis-per-fluvium-carnem-ferens">IV. Canis per Fluvium
 Carnem Ferens</h2>
-<p><span class="line">Amittit merito proprium qui alienum
-adpetit.<br></span> <span class="line">Canis, per fluvium carnem cum
-ferret, natans<br></span> <span class="line">lympharum in speculo vidit
-simulacrum suum,<br></span> <span class="line">aliamque praedam ab
-altero ferri putans<br></span> <span class="line">eripere voluit; verum
-decepta aviditas<br></span> <span class="line">et quem tenebat ore
-dimisit cibum,<br></span> <span class="line">nec quem petebat adeo
-potuit tangere.<br></span></p>
+<p><span class="line"><span class="newthought">Amittit merito</span>
+proprium qui alienum adpetit.<br></span> <span class="line">Canis, per
+fluvium carnem cum ferret, natans<br></span> <span
+class="line">lympharum in
+speculo<label for="45" class="margin-toggle sidenote-number"></label><input type="checkbox" id="45" class="margin-toggle"/><span
+class="sidenote">in speculo aquae</span> vidit simulacrum
+suum,<br></span> <span class="line">aliamque praedam ab altero ferri
+putans<br></span> <span class="line">eripere voluit; verum decepta
+aviditas<label for="46" class="margin-toggle sidenote-number"></label><input type="checkbox" id="46" class="margin-toggle"/><span
+class="sidenote">aviditas, cui canem aequamus, verum
+decepta</span><br></span> <span class="line">et quem tenebat ore dimisit
+cibum,<br></span> <span class="line">nec quem petebat adeo potuit
+tangere.<br></span></p>
 </section>
 <section>
 <h2 id="v.-canis-et-capella-ovis-et-leo">V. Canis et Capella, Ovis et
