--- a/latinsite/index.html
+++ b/latinsite/index.html
@@ -25,15 +25,20 @@
   <link rel="stylesheet" href="../tufte/tufte.css" />
 </head>
 <body>
+<section>
+<h3 id="c.-ivli-caesaris-commentariorvm-de-bello-gallico">c. ivli
+caesaris commentariorvm de bello gallico</h3>
 <ul>
-<li>aurelii augustini confessiones
-<details>
-<summary>
-<i>libri</i>
-</summary>
+<li><a href="dbg1.html">liber primus</a></li>
+<li><a href="dbg2.html">liber secundus</a></li>
+<li><a href="dbg3.html">liber tertius</a></li>
+</ul>
+</section>
+<section>
+<h3 id="aurelii-augustini-confessiones">aurelii augustini
+confessiones</h3>
 <ul>
-<li><a href="confessiones1.html">liber primus</a>
-<ul>
+<li><a href="confessiones1.html">liber primus</a></li>
 <li><a href="confessiones2.html">liber secundus</a></li>
 <li><a href="confessiones3.html">liber tertius</a></li>
 <li><a href="confessiones4.html">liber quartus</a></li>
@@ -45,19 +50,19 @@
 <li><a href="confessiones10.html">liber decimus</a></li>
 <li><a href="confessiones11.html">liber undecimus</a></li>
 <li><a href="confessiones12.html">liber duodecimus</a></li>
-<li><a href="confessiones13.html">liber tertius decimus</a>
-</details></li>
-</ul></li>
-</ul></li>
-<li>phaedri augusti liberti fabularum aesopiarum
+<li><a href="confessiones13.html">liber tertius decimus</a></li>
+</ul>
+</section>
+<section>
+<h3 id="phaedri-augusti-liberti-fabularum-aesopiarum">phaedri augusti
+liberti fabularum aesopiarum</h3>
 <ul>
 <li><a href="phaedrus1.html">liber primus</a></li>
 <li><a href="phaedrus2.html">liber secundus</a></li>
 <li><a href="phaedrus3.html">liber tertius</a></li>
 <li><a href="phaedrus4.html">liber quartus</a></li>
-<li><a href="phaedrus5.html">liber quintus</a>
-</section></li>
-</ul></li>
+<li><a href="phaedrus5.html">liber quintus</a></li>
 </ul>
+</section>
 </body>
 </html>
