--- a/caesar/dbg2.html
+++ b/caesar/dbg2.html
@@ -581,7 +581,7 @@ civitates in dicionem potestatemque populi Romani esse redactas.</p>
 </section>
 <section>
 <h3 id="section-34">35</h3>
-His rebus gestis omni Gallia pacata, tanta huius belli ad barbaros
+<p>His rebus gestis omni Gallia pacata, tanta huius belli ad barbaros
 opinio perlata est uti ab iis nationibus quae trans Rhenum incolerent
 legationes ad Caesarem mitterentur, quae se obsides daturas, imperata
 facturas pollicerentur. Quas legationes Caesar, quod in Italiam
@@ -589,7 +589,7 @@ Illyricumque properabat, inita proxima aestate ad se reverti iussit.
 Ipse in Carnutes, Andes, Turonos quaeque civitates propinquae iis locis
 erant ubi bellum gesserat, legionibus in hiberna deductis, in Italiam
 profectus est. Ob easque res ex litteris Caesaris dierum XV supplicatio
-decreta est, quod ante id tempus accidit nulli.
+decreta est, quod ante id tempus accidit nulli.</p>
 </section>
 </body>
 </html>
