--- a/latinsite/index.html
+++ b/latinsite/index.html
@@ -26,6 +26,10 @@
 </head>
 <body>
 <section>
+<h3 id="corneliae-ad-gaium-filium-fragmentum"><a
+href="cornelia.html">corneliae ad gaium filium fragmentum</a></h3>
+</section>
+<section>
 <h3 id="c.-ivli-caesaris-commentariorvm-de-bello-gallico">c. ivli
 caesaris commentariorvm de bello gallico</h3>
 <ul>
