--- a/caesar/dbg1.html
+++ b/caesar/dbg1.html
@@ -1047,13 +1047,13 @@ repertus et ad eum reductus est.</p>
 </section>
 <section>
 <h3 id="section-53">54.</h3>
-Hoc proelio trans Rhenum nuntiato, Suebi, qui ad ripas Rheni venerant,
-domum reverti coeperunt; quos ubi qui proximi Rhenum incolunt
+<p>Hoc proelio trans Rhenum nuntiato, Suebi, qui ad ripas Rheni
+venerant, domum reverti coeperunt; quos ubi qui proximi Rhenum incolunt
 perterritos senserunt, insecuti magnum ex iis numerum occiderunt. Caesar
 una aestate duobus maximis bellis confectis maturius paulo quam tempus
 anni postulabat in hiberna in Sequanos exercitum deduxit; hibernis
 Labienum praeposuit; ipse in citeriorem Galliam ad conventus agendos
-profectus est.
+profectus est.</p>
 </section>
 </body>
 </html>
